# test-task-sockets-client-server

./: README.md  build-client.bat  build-server.bat
client/: .gitignore  CMakeLists.txt
client/src/: main.cpp
common/include/: cmds.hpp  exceptions.hpp  format.hpp  sockets.hpp  wire.hpp
common/include/gie/: log.hpp  safe_main.hpp  util-scope-exit.hpp
server/: CMakeLists.txt
server/src/: main.cpp  obj_blob_loader.hpp  server_command_loop.cpp  server_command_loop.hpp
